# SSLParse

./: ._README.md  CMakeLists.txt  README.md  main.cpp
cerRoot/: Microsoft IT TLS CA 2.cer  RapidSSL RSA CA 2018.cer
cert/: ._GlobalSign Organization Validation CA - SHA256 - G2.cer  ._GlobalSign Root CA.cer  ._baidu.com.cer  baidu.com.cer
include/: SSLParse.cpp  SSLParse.h
